@@ -1,16 +1,16 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 val sharedGroup = "com.projectcitybuild.pcbridge"
-val sharedVersion = "6.1.0"
+val sharedVersion = "6.2.0"
 
 group = sharedGroup
 version = sharedVersion
 
 plugins {
     kotlin("jvm") version "1.9.22"
+    kotlin("plugin.serialization") version "2.0.21"
 
     id("org.jlleitschuh.gradle.ktlint") version "12.1.1"
-    id("org.jetbrains.kotlin.plugin.serialization") version "1.6.10"
     id("co.uzzu.dotenv.gradle") version "4.0.0"
 }
 
@@ -29,11 +29,11 @@ subprojects {
     dependencies {
         // Kotlin
         implementation(kotlin("stdlib-jdk8"))
-        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0")
-        implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
+        implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3")
 
         // Tests
-        testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.0")
+        testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0")
         testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
         testImplementation("org.mockito.kotlin:mockito-kotlin:5.0.0")
@@ -53,11 +53,14 @@ subprojects {
 
     tasks.withType<KotlinCompile> {
         kotlinOptions {
-            jvmTarget = "17"
+            jvmTarget = "21"
         }
     }
 
     tasks.test {
         useJUnitPlatform()
+
+        // https://github.com/mockito/mockito/issues/3037
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 }
